trunk/NewArchive/71f9b0b524238f1169f63baf236c85dd-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:35: error: expected '{' at end of input
 struct nested_exception : nested, exception
                                   ^
main.cpp:3:35: error: expected unqualified-id at end of input
